RESOLVED FIXED54557
[GTK] libsoup critical warnings
https://bugs.webkit.org/show_bug.cgi?id=54557
Summary [GTK] libsoup critical warnings
Philippe Normand
Reported 2011-02-16 08:08:30 PST
Happens when using the Flash plugin for instance: libsoup-CRITICAL **: soup_message_io_pause: assertion `io != NULL' failed seems like it's trying to pause a message for an already downloaded ressource. Patch incoming
Attachments
proposed patch (1.94 KB, patch)
2011-02-16 08:11 PST, Philippe Normand
no flags
proposed patch (1.93 KB, patch)
2011-02-16 08:54 PST, Philippe Normand
mrobinson: review+
Philippe Normand
Comment 1 2011-02-16 08:11:17 PST
Created attachment 82639 [details] proposed patch
Martin Robinson
Comment 2 2011-02-16 08:35:25 PST
Comment on attachment 82639 [details] proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=82639&action=review > Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:703 > + SoupMessage* soupMessage = d->m_soupMessage.get(); > + if (SOUP_STATUS_IS_SUCCESSFUL(soupMessage->status_code)) > + return; Hrm. Wouuld it be better to check for soupMessage->status_code != SOUP_STATUS_NONE? We don't want to cancel the message if it's finished for any reason.
Philippe Normand
Comment 3 2011-02-16 08:54:20 PST
Created attachment 82648 [details] proposed patch
Philippe Normand
Comment 4 2011-02-17 00:26:06 PST
WebKit Review Bot
Comment 5 2011-02-17 03:47:22 PST
http://trac.webkit.org/changeset/78798 might have broken GTK Linux 32-bit Debug
Note You need to log in before you can comment on or make changes to this bug.