2011-02-16  Philippe Normand  <pnormand@igalia.com>

Reviewed by Martin Robinson.

        [GTK] libsoup critical warnings
        https://bugs.webkit.org/show_bug.cgi?id=54557

        Avoid pausing a soup message for already downloaded resources.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::ResourceHandle::platformSetDefersLoading):

Canonical link: https://commits.webkit.org/68763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78798 268f45cc-cd09-0410-ab3c-d52691b4dbfc